Index.html file is moved to the root folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="./assets/main.js"></script>
+  <script defer src="./src/assets/main.js"></script>
   <link rel="shortcut icon" href="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" type="image/x-icon">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./src/assets/style.css">
   <title>Currículum Vitae</title>
 </head>
 <body>
